ram9/ram9-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ram9-deployment
  namespace: apps
  labels:
    site: www-ram9-cc
spec:
  replicas: 2
  selector:
    matchLabels:
      site: www-ram9-cc
  template:
    metadata:
      labels:
        site: www-ram9-cc
    spec:
      imagePullSecrets:
        - name: harbor-ram9-cc-r9 
      containers:
        - name: www-ram9-cc
          image: harbor.ram9.cc/r9/ram9-site:0.1.1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "4Mi"
              cpu: "200m"
            limits:
              memory: "8Mi"
              cpu: "300m"
