ram9/ram9-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    site: www-ram9-cc
  name: ram9-service
  namespace: apps
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    site: www-ram9-cc
