ram9/ram9-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ram9-ingress
  labels:
    site: www-ram9-cc
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: www.ram9.cc
    http:
      paths:
      - backend:
          service:
            name: ram9-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: home.ram9.cc
    http:
      paths:
      - backend:
          service:
            name: ram9-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: ram9.cc
    http:
      paths:
      - backend:
          service:
            name: ram9-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.ram9.cc
    - home.ram9.cc
    - ram9.cc
    secretName: tls-cc-ram9-www
